--- a/ServerAuth/resources/config.yml
+++ b/ServerAuth/resources/config.yml
@@ -6,6 +6,8 @@ IPLogin: false
 force-single-auth: true
 #Allow not authenticated users to move
 allow-move: false
+#Block the usage of "./"
+block-dotslash: true
 #Block chat for not authenticated users
 block-chat: true
 #Block commands for not authenticated users
